# elma

./: README.md  example_batch_run.py  pyproject.toml  requirements.txt
elma/: __init__.py  core.py
tests/: test_core.py
