[build-system]

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elma"
version = "0.1.0"
description = "Functions for bar detection in galaxy images"
authors = [{name = "Bruna Lima", email= "brunarblima93@gmail.com"}]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "astropy",
    "photutils",
    "scipy"
]

[tool.setuptools.packages.find]
where = ["."]

